# spsim

./: .travis.yml  AUTHORS  CMakeLists.txt  COPYRIGHT  Makefile  Makefile.AMD  README.md  amplification.c  amplification.h  atomsf.cdata  box.h  box_deconvolute.c  config.c  config.h  diffraction.c  diffraction.h  filter.c  image_integrate.c  io.c  io.h  molecule.c  molecule.h  mpi.c  mpi.h  noise.cpp  noise.h  real_space.c  spsim.c  stoc1.cpp  stoc2.cpp  stocc.h  testpois.cpp
.github/workflows/: test.yml
cmake/Modules/: FindNFFT.cmake  FindNumpy.cmake
doc/: UserManual.aux  UserManual.bbl  UserManual.blg  UserManual.html  UserManual.tex  UserManual.toc  UserManual_ind.html  UserManuals.html  ewald.xcf  ewald2.blend  imaging.bib
doc/UserManual/: UserManual.css  UserManual.html  WARNINGS  images.pl  images.tex  internals.pl  labels.pl  node1.html  node2.html  node3.html  node4.html  node5.html  node6.html  node7.html  node8.html
examples/: noiseless_output.vtk  real_output.vtk  spsim.conf  spsim.confout
include/: cmake_config.h.in  config.h  crystal.h  diffraction.h  io.h  molecule.h  mpi.h  mpi_comm.h  noise.h  real_space.h  scanner.h  spsim.h
include/libconfig/: libconfig.h
scripts/: macosx_dependencies.pl  package_binaries.pl
src/: CMakeLists.txt  amplification.c  box_deconvolute.c  config.c  crystal.c  crystal.cu  diffraction.c  diffraction.cu  filter.c  io.c  molecule.c  mpi.c  noise.c  real_space.c  spsim.c  spsim.py  spsim_pybackend.i
src/libconfig/: grammar.c  scanner.c
